packages/compiler-rs/tests/transform/snapshots/r#mod__transform__hmr__export.snap
---
source: tests/transform/hmr.rs
expression: code
---
export const foo = () => {};
foo.__hmrId = "3b6957b69bea9439";
__VUE_HMR_RUNTIME__.createRecord("3b6957b69bea9439", foo);
if (import.meta.hot) import.meta.hot.accept((mod) => {
  __VUE_HMR_RUNTIME__[mod.foo.render || typeof mod.foo === "function" ? "rerender" : "reload"](mod.foo.__hmrId, mod.foo.render || mod.foo);
});
