packages/compiler-rs/tests/transform/snapshots/r#mod__transform__hmr__export_default_with_identifier.snap
---
source: tests/transform/hmr.rs
expression: code
---
const Comp = () => {};
export default Comp;
Comp.__hmrId = "52164bac249078a3";
__VUE_HMR_RUNTIME__.createRecord("52164bac249078a3", Comp);
if (import.meta.hot) import.meta.hot.accept((mod) => {
  __VUE_HMR_RUNTIME__[typeof mod.default === "function" ? "rerender" : "reload"](mod.default.__hmrId, mod.default);
});
